kubernetes-demo/sample_service_kubenetes/k8s_demo_service_svc.yaml
---
apiVersion: "v1"
kind: "Service"
metadata:
  annotations: {}
  finalizers: []
  labels:
    app: "k8s_demo_service"
  name: "k8s-demo-service-v1"
  ownerReferences: []
spec:
  externalIPs: []
  loadBalancerSourceRanges: []
  ports:
  - port: 9090
    protocol: "TCP"
    targetPort: 9090
  selector:
    app: "k8s_demo_service"
  
---
apiVersion: "v1"
kind: "Service"
metadata:
  annotations: {}
  finalizers: []
  labels:
    app: "k8s_demo_service"
  name: "k8s-demo-securedservice-v1"
  ownerReferences: []
spec:
  externalIPs: []
  loadBalancerSourceRanges: []
  ports:
  - port: 9095
    protocol: "TCP"
    targetPort: 9095
  selector:
    app: "k8s_demo_service"
